# imz2anndata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: anndata_schema.md
examples/: bladder_msi_demo.ipynb
imz2anndata/: __init__.py  aligner.py  anndata_builder.py  cli.py  config.py  io.py  models.py  pipeline.py  spatial_filtering.py
imz2anndata/extractors/: __init__.py  base.py  openms.py
notebooks/: 01_smoke_test.ipynb  02_real_imzml_test.ipynb
tests/integration/: test_dataset_consistency.py  test_real_data_e2e.py
tests/unit/: test_aligner.py  test_anndata_builder.py  test_boundaries.py  test_cli.py  test_io.py  test_openms_extractor.py  test_pipeline.py  test_spatial_filtering.py
