[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imz2anndata"
version = "0.1.0"
description = "Convert imzML (MSI) datasets into AnnData (.h5ad)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "imz2anndata contributors" }
]
dependencies = [
  "anndata>=0.12",
  "numpy>=2.0",
  "pandas>=2.0",
  "pyimzML>=1.5",
  "pyopenms>=3.0",
  "scipy>=1.12"
]
keywords = ["imzml", "anndata", "msi", "metabolomics", "spatial"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
imz2anndata = "imz2anndata.cli:main"

[tool.setuptools.packages.find]
include = ["imz2anndata*"]
